# thwarter

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TESTING.md  build.sh  thwart.toml
authors/mx/test-world/: world.toml
authors/mx/test-world/castle/: barracks.md  kitchen.md  pantry.md  stables.md  (+2 more)
authors/world/: world.toml
authors/world/castle/: armory.md  courtyard.md  forge.md  gardens.md  great-hall.md  greenhouse.md  library-upper.md  library.md  throne-room.md  training-yard.md  treasury.md
authors/world/forest/: clearing.md  deep-woods.md  grove.md  hollow.md  path.md  pond.md  stream.md  thicket.md  wolf-den.md
authors/world/npcs/: forest-ranger.md  gardener.md  guard-captain.md  head-cook.md  king.md  royal-botanist.md  royal-librarian.md  shrine-keeper.md  water-sprite.md
authors/world/objects/: flowing-water.md  treasure-chest.md
design/: CLI_DESIGN.md  DESIGN.md
src/: lib.rs
src/cli/: config.rs  mod.rs  output.rs
src/cli/commands/: debug.rs  map.rs  mod.rs  search.rs  show.rs  validate.rs
src/engines/: character_engine.rs  game_engine.rs  mod.rs  narrative_engine.rs  world_engine.rs
src/models/: mod.rs
src/models/character/: character.rs  character_state.rs  mod.rs  player.rs
src/models/game/: action.rs  game.rs  game_session.rs  mod.rs
src/models/narrative/: game_state.rs  mod.rs  narrative_arc.rs  plot_point.rs  story_variable.rs
src/models/world/: coordinate.rs  location.rs  mod.rs  world_graph.rs
src/parsers/: markdown_parser.rs  metadata_parser.rs  mod.rs
tasks/: ISSUES.md  cli-first-pass-TODO.md  unit-testing-plan.md
(+19 files in other folders)
